assets/css/style.css
div>.product {
    margin-top: 4rem;
}

div+#product {
    text-align: center;
}

form>button.search-btn {
    right: 2rem;
    position: absolute;
    border-radius: 3rem;
}

a>.clwhite {
    color: #777777;
    display: flex;
    padding-left: 10px;
}

a>.wish {
    color: white;
    display: flex;
    padding-left: 10px;
}

a>i.setasize {
    margin-top: 1rem;
    font-size: 50px;
}

a>i.setgsize {
    font-size: 45px;
    padding-bottom: 2px;
}

a>i.logowidth {
    padding-right: 10px;
    margin-top: 10px;
}

footer>address.addrwidth {
    margin-top: 1rem;
}

body>p.privacytitle {
    margin-top: 1rem;
    margin-left: 1rem;
}

body>div.privacybody {
    margin-left: 1rem;
}

div>div.privacyinfo {
    margin-top: 1.5rem;
    padding-left: 10px;
}

div>div.contactstyle {
    padding-left: 2rem;
}

body>div.contactbody {
    margin-left: 1rem;
    margin-top: 1rem;
}

.contactwidth {
    margin-top: 10px;
}

bold {
    font-weight: bold;
}

div>div+#item_added {
    border-width: 1px;
    border-style: solid;
    border-color: black;
}

div>div>a>img.imgcart {
    max-width: 100%;
}

div>div>div.cartprice {
    padding-top: 20px;
    padding-bottom: 5px;
    font-size: 25px;
    font-weight: bold;
}

a.cart_link {
    color: #525f7f;
}

a.cart_link:hover {
    color: #233dd2;
}

@media (min-width: 320px) {
    div>.product {
        display: inline-block;
        margin: 1rem;
        margin-top: 3rem;
        width: 95%;
        max-height: 576px;
    }

    form>button.search-btn {
        right: 2rem;
        position: absolute;
        border-radius: 3rem;
    }
    div>.product>img {
        max-height: 200px;
    }
    a>.clwhite {
        color: #777777;
    }
}

@media (min-width: 420px) {
    div>.product {
        display: inline-block;
        margin: 1rem;
        margin-top: 3rem;
        width: 95%;
        max-height: 576px;
    }
    form>button.search-btn {
        right: 2rem;
        position: absolute;
        border-radius: 3rem;
    }
    div>.product>img {
        max-height: 220px;
    }
    a>.clwhite {
        color: #777777;
    }
}

@media (min-width: 576px) {
    div>.product {
        display: inline-block;
        margin: 1rem;
        margin-top: 3rem;
        width: 85%;
        max-height: 680px;
    }
    form>button.search-btn {
        right: 2rem;
        position: absolute;
        border-radius: 3rem;
    }
    div>.product>img {
        max-height: 220px;
    }
    a>.clwhite {
        color: #777777;
    }
}

@media (min-width: 768px) {
    div>.product {
        display: inline-block;
        margin: 20px;
        margin-top: 3rem;
        width: 95%;
        max-height: 940px;
    }
    form>button.search-btn {
        right: 2rem;
        position: absolute;
        border-radius: 3rem;
    }
    div>.product>img {
        max-height: 240px;
        max-width: 100%;
    }
    a>.clwhite {
        color: #777777;
    }
}

@media (min-width: 992px) {
    div>.product {
        display: inline-block;
        margin: 20px;
        width: 22rem;
        max-height: 480px;
    }
    div>.product>img {
        max-height: 211.79px;
    }
    form>button.search-btn {
        right: 12.75rem;
        position: absolute;
        border-radius: 3rem;
    }
    a>.clwhite {
        color: #ffffff;
    }
    #cart-count {
        color: #ffffff;
    }
}

